--- a/index.html
+++ b/index.html
@@ -10,20 +10,21 @@
   <body>
     <h1>Atrapa al topo</h1>
     <h2>Topos atrapados:</h2>
-    <h2>0</h2>
+    <h2 id="puntaje">0</h2>
+
     <h2>Tiempo:</h2>
-    <h2>20</h2>
-    <div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+    <h2 id="tiempo">20</h2>
+
+    <div class="cuadricula">
+      <div class="cuadrado" id="1"></div>
+      <div class="cuadrado" id="2"></div>
+      <div class="cuadrado" id="3"></div>
+      <div class="cuadrado" id="4"></div>
+      <div class="cuadrado" id="5"></div>
+      <div class="cuadrado" id="6"></div>
+      <div class="cuadrado" id="7"></div>
+      <div class="cuadrado" id="8"></div>
+      <div class="cuadrado" id="9"></div>
     </div>
   </body>
-  <script src="app.js"></script>
 </html>
